force-app/main/default/objects/Report_User__c/Report_User__c.object-meta.xml
<CustomObject>
    <label>Report User</label>
    <nameField>
        <label>Report User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>