force-app/main/default/objects/Report_User__c/fields/All_Account_Access__c.field-meta.xml
<CustomField>
    <fullName>All_Account_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Account Access</label>
    <type>Checkbox</type>
</CustomField>