force-app/main/default/objects/Report_User__c/fields/IsDemo__c.field-meta.xml
<CustomField>
    <fullName>IsDemo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDemo</label>
    <type>Checkbox</type>
</CustomField>