force-app/main/default/objects/Report_User__c/fields/Latest_OTP__c.field-meta.xml
<CustomField>
    <fullName>Latest_OTP__c</fullName>
    <label>Latest OTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>